test_regress/t/t_class_param_bad2.out
%Error: t/t_class_param_bad2.v:14:3: Class parameter type without default value is never given value (IEEE 1800-2023 6.20.1): 'PARAMB'
                                   : ... note: In instance 't'
   14 |   Cls c;   
      |   ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_class_param_bad2.v:8:10: Parameter type without default value is never given value (IEEE 1800-2023 6.20.1): 'PARAMB'
                                   : ... note: In instance 't'
    8 |     type PARAMB
      |          ^~~~~~
%Error: Exiting due to
